[tool.poetry]
name = "lora-co-serving"
version = "0.1.0"
description = ""
authors = ["Ruslan Volchetskyi <ruclanvolchetskyy1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
transformers = "^4.51.3"
peft = "^0.15.2"
datasets = "^3.5.0"
accelerate = "^1.6.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
