[tool.poetry]
name = "lora-co-serving"
version = "0.1.0"
description = ""
authors = ["Ruslan Volchetskyi <ruclanvolchetskyy1990@gmail.com>"]
readme = "README.md"

packages = [
    { include = "core" },
    { include = "managers" },
    { include = "prioritization" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.51.3"
peft = "^0.15.2"
datasets = "^3.5.0"
accelerate = "^1.6.0"
pyyaml = "^6.0.2"
torch = {version = "^2.6.0+cu126", source = "pytorch-gpu-src"}
torchvision = {version = "^0.21.0+cu126", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.6.0+cu126", source = "pytorch-gpu-src"}
pytest = "^8.3.5"
matplotlib = "^3.10.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
